--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,34 @@
 header {
     background: linear-gradient(to left, #452764 0%, #235588 100%);
 }
+
+/* FORECAST CARDS */
+
+.forecast-card {
+	background-image: linear-gradient(160deg, #235588,  #452764);
+	width: 250px;
+	opacity: 1;
+	transition: opacity 0.2s, transform 0.2s;
+}
+
+.forecast-card:hover {
+	opacity: 0.9;
+	transform: scale(1.03);
+}
+
+.forecast-card img {
+	margin: 0 auto;
+}
+
+.forecast-date {
+	text-align: center;
+	font-size: 150%;
+}
+
+.forecast-temp,
+.forecast-wind,
+.forecast-humidity {
+	margin-left: 15px;
+	text-align: center;
+	font-size: 125%;
+}
