--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-/* header {
-  background: linear-gradient(to left, #452764 0%, #235588 100%);
-} */
-
 /* UTILITIES */
 
 body {
@@ -15,8 +11,12 @@ a:visited {
 	text-decoration: none;
 }
 
-.custom-jumbotron {
-	background-image: linear-gradient(to right, #0e1b31, #2d2538);
+header {
+  background: linear-gradient(to left, #452764 0%, #163555 100%);
+}
+
+header h1 {
+  margin: -30px;
 }
 
 .weather-container {
@@ -25,15 +25,9 @@ a:visited {
 
 /* MAIN CARD */
 
-#main-card,
-.forecast-card,
-.search-card {
-	box-shadow: 3px 3px 15px #4d4d4d;
-}
-
 #main-card {
 	/* background-color: #77756d; */
-	background-image: linear-gradient(to right, #77756d, #8a8881);
+  background-image: linear-gradient(160deg, #163555, #452764);
 	font-size: 125%;
 	transition: transform 0.2s;
 }
@@ -44,14 +38,23 @@ a:visited {
 
 #main-card-city {
 	font-weight: bold;
+  margin-bottom: 30px;
+}
+
+#main-card-date {
+  font-size: 20px;
 }
 
 #main-card-icon {
-	width: 60%;
+	width: 300px;
 }
 
-.main-text {
-	font-size: 120%;
+#main-card p{
+  margin: 5px;
+}
+
+.main-left-content {
+  margin-top: 30px;
 }
 
 /* SEARCH CARD */
@@ -59,10 +62,15 @@ a:visited {
 	background-color: blue;
 }
 
+.custom-button {
+  background-color: #163555;
+  border-color: #163555;
+}
+
 /* FORECAST CARDS */
 
 .forecast-card {
-	background-image: linear-gradient(160deg, #0e1b31, #2d2538);
+	background-image: linear-gradient(160deg, #163555, #452764);
 	width: 250px;
 	opacity: 1;
 	transition: opacity 0.2s, transform 0.2s;
@@ -100,6 +108,7 @@ a:visited {
 	width: 100px;
 	padding: 5px 10px;
 	border-radius: 8px;
+  display: none;
 }
 
 .favorable {
@@ -116,17 +125,12 @@ a:visited {
 
 footer {
 	text-align: center;
-	background-image: linear-gradient(to right, #0e1b31, #2d2538);
+	background-image: linear-gradient(to left, #452764 0%, #163555 100%);
 	justify-content: center;
-	width: 100%;
 	padding: 12px;
+  color: white;
 }
 
-footer img {
-	width: 50px;
-	transition: transform 1s;
-}
-
-footer img:hover {
-	transform: rotate(360deg);
+footer a:hover {
+  color: #926fb6;
 }
